--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -98,6 +98,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/currentPinInput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="PIN Actual"
@@ -105,6 +106,7 @@
                     style="@style/CustomEditText" />
 
                 <EditText
+                    android:id="@+id/newPinInput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="PIN Nueva"
@@ -112,6 +114,7 @@
                     style="@style/CustomEditText" />
 
                 <EditText
+                    android:id="@+id/confirmNewPinInput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Confirmar PIN"
@@ -119,6 +122,7 @@
                     style="@style/CustomEditText" />
 
                 <Button
+                    android:id="@+id/saveChangesBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Guardar"
